feat: 优化记忆加载机制,消息和回话总结使用成本更低的模型